# CellularAutomaton

./: Automaton.cc  Automaton.cpp  CMakeLists.txt  README.md
include/: Manager.hpp  Model.hpp  Utils.hpp  View.hpp
res/: build_file.txt  ethyr  example_bound_cond.txt  example_build_file.txt
resources/: 0Blo_E(C,f4_1)  0Blo_E(E,f4_1)  1Blo_EP(C,f4_1)  1Blo_EP(F,f1_1)  1Blo_EP(F,f3_1)  1Blo_ES(A,f4_1)  1Blo_ES(C,f4_1)  1Ele_C2(A,f1_1)  4_A4(F1)  4_A4(F2)  4_A4(F3)  A3(f1_1)  SepInit_EE(A,f3_1)  SepInit_EE(B,f1_1)  SepInit_EE(C,f3_1)  e(f1_1)
